# agent-playground

./: .env.example  .gitignore  README.md  main.py  prompt_loader.py  pyproject.toml  weather.md
llm/: base.py  deepseek.py  gemini.py
prompt/: environment.md  system.md  system_zh.md  user.md  user_zh.md
server/: actuator.py  crud.py  server.py  tool.py  tools.json  utils.py
tools/: base.py  file.py  weather.py
